<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    android:id="@+id/right_item_other_ll"
    android:layout_marginTop="@dimen/dp_20"
    >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_titleed"
            android:textSize="@dimen/sp_13"
            android:textColor="@color/text_color_1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_titleed_info"
            android:textSize="@dimen/sp_12"
            android:layout_marginTop="@dimen/dp_10"
            />
        <EditText
            android:id="@+id/right_item_ed"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:background="@drawable/bg_edit_other"
            android:hint="@string/other_titleed_content"
            android:textColorHint="@color/text_gray_color2"
            android:textSize="@dimen/dp_13"
            android:gravity="center|left"
            android:paddingLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:maxLength="15"
            android:singleLine="true"
            />


</LinearLayout>