<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_view_push"
    >

    <TextView
        android:id="@+id/view_type_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doing_title"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:textSize="@dimen/sp_15"
        />





    <EditText
        android:id="@+id/view_type_other_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/view_other_type"
        android:background="@color/white"
        android:paddingLeft="@dimen/dp_10"
        android:textSize="@dimen/sp_14"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_below="@+id/view_type_tv"
        android:maxLength="6"
        android:focusable="true"
        android:focusableInTouchMode="true"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"
        android:background="@color/bg_gray"
        android:layout_below="@+id/view_type_other_ed"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/view_type_other_ed"
        >
        <TextView
            android:id="@+id/view_other_cancelTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:gravity="center"
            android:layout_margin="@dimen/dp_10"
            />
        <View
            android:layout_width="@dimen/dp_0_5"
            android:layout_height="match_parent"
            android:background="@color/bg_gray"
            />
        <TextView
            android:id="@+id/view_other_addTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"
            android:gravity="center"
            android:layout_margin="@dimen/dp_10"
            />






    </LinearLayout>






</RelativeLayout>