<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_share_white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/share_text"
        android:textColor="@color/text_color_1"
        android:textSize="@dimen/sp_13" />


    <HorizontalScrollView
        android:id="@+id/yhandleHScroll_01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_15"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/bshare_friend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dp_45"
                    android:layout_height="@dimen/dp_45"
                    android:layout_gravity="center"
                    app:srcCompat="@mipmap/share_friend" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/share_friend"
                    android:textSize="@dimen/sp_11" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bshare_wx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dp_45"
                    android:layout_height="@dimen/dp_45"
                    android:layout_gravity="center"
                    app:srcCompat="@mipmap/share_weixin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/wx_text"
                    android:textSize="@dimen/sp_11" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bshare_circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dp_45"
                    android:layout_height="@dimen/dp_45"
                    android:layout_gravity="center"
                    app:srcCompat="@mipmap/share_circle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/pcircle_text"
                    android:textSize="@dimen/sp_11" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bshare_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dp_45"
                    android:layout_height="@dimen/dp_45"
                    android:layout_gravity="center"
                    app:srcCompat="@mipmap/share_qq" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/qq_friend"
                    android:textSize="@dimen/sp_11" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bshare_dd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dp_45"
                    android:layout_height="@dimen/dp_45"
                    android:layout_gravity="center"
                    app:srcCompat="@mipmap/share_dd" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/dd"
                    android:textSize="@dimen/sp_11" />

            </LinearLayout>

        </LinearLayout>
    </HorizontalScrollView>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:background="@color/line_color" />

    <HorizontalScrollView
        android:id="@+id/yhandleHScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/bshare_pht"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dp_45"
                    android:layout_height="@dimen/dp_45"
                    android:layout_gravity="center"
                    app:srcCompat="@mipmap/alc_sicon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/create_photo"
                    android:textSize="@dimen/sp_11" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bshare_wb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dp_45"
                    android:layout_height="@dimen/dp_45"
                    android:layout_gravity="center"
                    app:srcCompat="@mipmap/copy_url" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="复制链接"
                    android:textSize="@dimen/sp_11"

                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bcollect_Ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/isCollect_img"
                    android:layout_width="@dimen/dp_45"
                    android:layout_height="@dimen/dp_45"
                    android:layout_gravity="center"
                    app:srcCompat="@mipmap/collect_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/collect_text"
                    android:textSize="@dimen/sp_11" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/breport_Ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dp_45"
                    android:layout_height="@dimen/dp_45"
                    android:layout_gravity="center"
                    app:srcCompat="@mipmap/report_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/report_text"
                    android:textSize="@dimen/sp_11" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btop_Lm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_message"
                    android:layout_width="@dimen/dp_45"
                    android:layout_height="@dimen/dp_45"
                    android:layout_gravity="center"
                    app:srcCompat="@mipmap/close_message" />

                <TextView
                    android:id="@+id/tv_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/close_leaving_message_text"
                    android:textSize="@dimen/sp_11" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btop_Ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dp_45"
                    android:layout_height="@dimen/dp_45"
                    android:layout_gravity="center"
                    app:srcCompat="@mipmap/top_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/top_text"
                    android:textSize="@dimen/sp_11" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bedit_Ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_widthPercent="20%">

                <ImageView
                    android:layout_width="@dimen/dp_45"
                    android:layout_height="@dimen/dp_45"
                    android:layout_gravity="center"
                    app:srcCompat="@mipmap/editx_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/edit"
                    android:textSize="@dimen/sp_11" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bdown_Ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dp_45"
                    android:layout_height="@dimen/dp_45"
                    android:layout_gravity="center"
                    app:srcCompat="@mipmap/down_reicon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/downre_text"
                    android:textSize="@dimen/sp_11" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bdelete_Ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dp_45"
                    android:layout_height="@dimen/dp_45"
                    android:layout_gravity="center"
                    app:srcCompat="@mipmap/delete_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/delete_text"
                    android:textSize="@dimen/sp_11" />

            </LinearLayout>
        </LinearLayout>


    </HorizontalScrollView>


    <ImageView
        android:id="@+id/tv_cancel"
        android:layout_width="@dimen/dp_28"
        android:layout_height="@dimen/dp_28"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_18"
        android:layout_marginBottom="@dimen/dp_18"
        app:srcCompat="@mipmap/cacel_x_icon" />

</LinearLayout>